# PrajaScan

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: findings.py  projects.py  scans.py  targets.py
backend/app/core/: config.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 4d8635c7d2d1_init_migrations.py  9e4487d75b01_add_scan_jobs.py  a8dc9a7c7030_add_findings_table.py  ce5581fad82a_add_project_and_target_tables.py
backend/app/db/models/: __init__.py  finding.py  project.py  scan_job.py  target.py
backend/app/schemas/: finding.py  project.py  scan.py  target.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: __init__.py  scan_tasks.py
infra/: docker-compose.yml
