[project]
name = "prajascan-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "celery>=5.3",
  "redis>=5.0",
  "python-dotenv>=1.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"
